# axiom-compute

./: .gitignore  .mcp.json  AGENTS.md  BENCHMARKS.md  CLAUDE.md  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md
.claude/commands/: axc-optimize.md
.github/workflows/: ci.yml
.pipeline/: PIPELINE.md  config.json
.pipeline/benchmarks/: .gitignore  baselines.json
.pipeline/milestones/: M0-bootstrap.json  M1.1-scalar-ops.json  M1.2-buffers.json  M1.3-control-flow.json  M1.4-subgroup-ops.json  M1.5-vulkan-dispatch.json  M2.1-cooperative-matrix.json  M2.2-bench-harness.json  M2.3-strategy-holes.json  M2.3a-dispatch-perf.json  M2.4-mcp-server.json  M2.5-q4_0-matmul.json  M2.6-q4km-matmul.json
.pipeline/runs/: M1.1-coder-retry1.json  M1.2-coder-retry2.json  M1.2-coder.json  M1.3-coder.json  M2.2-coder.json  M2.3-coder.json  M2.3a-coder.json  M2.4-coder.json  M2.6-coder.json
.pipeline/templates/: architect.md  coder.md  optimistic_code_reviewer.md  optimistic_design_reviewer.md  pessimistic_code_reviewer.md  pessimistic_design_reviewer.md  qa_agent.md
crates/axc-codegen/: Cargo.toml
crates/axc-codegen/src/: body.rs  buffers.rs  coopmat.rs  emit.rs  lib.rs  q4_0.rs  subgroup.rs
crates/axc-driver/: Cargo.toml
crates/axc-driver/benches/: common.rs  compile.rs  cpu_reference.rs  dispatch.rs  dispatch_q4km.rs  postprocess.rs
crates/axc-driver/src/: cli.rs  lib.rs  main.rs  optimize.rs
crates/axc-driver/src/mcp/: dispatch.rs  mod.rs  protocol.rs
crates/axc-driver/src/mcp/tools/: bench_variant.rs  compile_variant.rs  enumerate_variants.rs  grid_search.rs  load_source.rs  mod.rs  optimization_history.rs
crates/axc-driver/tests/: bench_regression.rs  common_helpers.rs  compile_emits_metadata_sidecar.rs  compile_empty_kernel.rs  compile_gid_demo.rs  compile_matmul_tile.rs  compile_q4_0_dequant_matvec.rs  compile_q4km_dequant_matvec.rs  compile_reduction.rs  compile_saxpy.rs  compile_scalar_demo.rs  compile_subgroup_reduce.rs  compile_vector_add.rs  compile_vector_axpy.rs  compile_workgroup_barrier_demo.rs  mcp_roundtrip.rs  strategy_saxpy_autotune.rs
crates/axc-hir/: Cargo.toml
crates/axc-hir/src/: buffer.rs  control_flow.rs  coopmat.rs  expr.rs  hir.rs  lib.rs  loop_ctx.rs  lower.rs  param.rs  q4_0.rs  subgroup.rs  ty.rs  typecheck.rs  validate.rs
crates/axc-lexer/: Cargo.toml
crates/axc-lexer/src/: lexer.rs  lib.rs  token.rs
crates/axc-optimize/: Cargo.toml
crates/axc-optimize/src/: enumerator.rs  grid_search.rs  lib.rs
crates/axc-parser/: Cargo.toml
crates/axc-parser/src/: ast.rs  lib.rs  parser.rs
crates/axc-runtime/: Cargo.toml  clippy.toml
crates/axc-runtime/src/: buffers.rs  context.rs  device_owner.rs  dispatch.rs  error.rs  icd.rs  instance_owner.rs  kernel_handle.rs  lib.rs  metadata.rs  pipeline.rs  pipeline_cache.rs  resources.rs
crates/axc-runtime/tests/: context_lifecycle.rs  dispatch_error_paths.rs  dispatch_handle_saxpy_amortized.rs  dispatch_saxpy.rs  dispatch_vector_add.rs  kernel_handle_outlives_context.rs  kernel_handle_reuse.rs  metadata_roundtrip.rs  pipeline_cache_disk.rs  push_constants_only_kernel.rs
docs/: MASTER_TASK_LIST.md
examples/: empty_kernel.axc  gid_demo.axc  matmul_tile.axc  q4_0_dequant_matvec.axc  q4km_dequant_matvec.axc  reduction.axc  saxpy.axc  scalar_demo.axc  subgroup_reduce.axc  vector_add.axc  vector_axpy.axc  workgroup_barrier_demo.axc
tests/fixtures/: empty_kernel.spv.expected_header.txt
