[workspace]
resolver = "2"
# Members populated by M0 Coder agent per Architect's spec.
members = [
    "crates/axc-lexer",
    "crates/axc-parser",
    "crates/axc-hir",
    "crates/axc-codegen",
    "crates/axc-optimize",
    "crates/axc-driver",
    "crates/axc-runtime",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rudybear/axiom-compute"
description = "AXIOM-Compute -- AI-first compute language lowering to SPIR-V for Vulkan/OpenCL/WebGPU"

[workspace.dependencies]
thiserror = "2"
miette = { version = "7", features = ["fancy"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
insta = { version = "1", features = ["yaml"] }
rspirv = "0.12"
spirv = "0.3"
ash = "0.38"
# M2.1: IEEE-754 binary16 type for f16 literal conversion.
half = { version = "2.4", default-features = false }
# M2.2: Benchmark harness and deterministic PRNG.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
rand = "0.8"
