[package]
name = "axc-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI driver for the AXIOM-Compute compiler"

[[bin]]
name = "axc"
path = "src/main.rs"

[dependencies]
axc-lexer = { path = "../axc-lexer" }
axc-parser = { path = "../axc-parser" }
axc-hir = { path = "../axc-hir" }
axc-codegen = { path = "../axc-codegen" }
axc-runtime = { path = "../axc-runtime" }
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
rspirv = { workspace = true }
spirv = { workspace = true }
spirv-tools = "0.13"
