[package]
name = "axc-driver"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI driver for the AXIOM-Compute compiler (M2.4: MCP stdio server)"

[[bin]]
name = "axc"
path = "src/main.rs"

# M2.2 bench harness: compile, cpu_reference, dispatch, postprocess.
# Order matters (AT-708): compile FIRST, cpu_reference SECOND, dispatch THIRD,
# postprocess FOURTH — ensures compile runs before GPU dispatch warms caches.
[[bench]]
name = "compile"
path = "benches/compile.rs"
harness = false

[[bench]]
name = "cpu_reference"
path = "benches/cpu_reference.rs"
harness = false

[[bench]]
name = "dispatch"
path = "benches/dispatch.rs"
harness = false

[[bench]]
name = "postprocess"
path = "benches/postprocess.rs"
harness = false

[features]
# M2.2 AT-714: fault-injection feature for regression-gate CI validation.
# When enabled, cpu_saxpy_reference adds a 100M-iteration accumulator loop
# that artificially slows execution by ~10000x, proving the regression gate
# correctly detects slowdowns. NEVER enabled in default builds.
bench_regression_fixture_slowdown = []

[dependencies]
axc-lexer    = { path = "../axc-lexer" }
axc-parser   = { path = "../axc-parser" }
axc-hir      = { path = "../axc-hir" }
axc-codegen  = { path = "../axc-codegen" }
axc-optimize = { path = "../axc-optimize" }
axc-runtime  = { path = "../axc-runtime" }
clap = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
xxhash-rust = { workspace = true }
# M2.4: Deterministic seeded input generation for bench_variant.
rand = { workspace = true }
# M2.4: POSIX flock(LOCK_EX) for atomic history file append.
libc = "0.2"
# M2.4: In-process SPIR-V validation for compile_variant + bench_variant.
spirv-tools = "0.13"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# M2.4: SPIR-V capability name mapping.
spirv = { workspace = true }

[dev-dependencies]
rspirv = { workspace = true }
spirv = { workspace = true }
# M2.2: Criterion bench framework (cargo_bench_support only — no HTML reports dep).
criterion = { workspace = true }
# M2.2: Serde for baselines.json and candidate-baselines.json serialization.
# M2.5: half crate for bit-exact f16 → f32 conversion in Q4_0 CPU reference.
half = "2"
# M2.4: Temp file creation for history append tests.
tempfile = { workspace = true }
