[package]
name = "axc-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "High-level IR for AXIOM-Compute — validates GPU annotations"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
axc-lexer = { path = "../axc-lexer" }
axc-parser = { path = "../axc-parser" }
thiserror = { workspace = true }
miette = { workspace = true }
serde = { workspace = true, optional = true }
# M2.1: IEEE-754 binary16 conversions for fit_float_literal(f16) and codegen.
half = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
